--- a/jmax-vercel/index.html
+++ b/jmax-vercel/index.html
@@ -1,10 +1,17 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chad Card Customizer</title>
+
+    <!-- ✅ Google Font link goes INSIDE <head> -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap"
+      rel="stylesheet"
+    >
   </head>
+
   <body style="margin:0">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
